k8saddon/logging/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      # Comment the following tolerations if must not be deployed on master
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.4.2
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: loggingauth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Logging'
spec:
  tls:
    - hosts:
        - busterkeen.francecentral.cloudapp.azure.com
      secretName: monitoring/monitoring-certificate
  rules:
    - host: busterkeen.francecentral.cloudapp.azure.com
      http:
        paths:
          - path: /kibana
            backend:
              serviceName: kibana
              servicePort: 5601
